<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Tagahanap</string>

    <string name="mapbox_access_token" tools:ignore="Typos">sk.eyJ1IjoiYmFsYW5sYXlzYyIsImEiOiJja3R1NWM4MmsxeGRkMnBwbmx2dGVwM3RjIn0.tWNt1zv7GeE8YgJRXqsDQA</string>

    <string name="id_number">ID Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sample_text">Sample Text</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="keep_me_signed_in">Keep me Signed in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="destination">Destination</string>
    <string name="schoolInfoText">
        Welcome to the University of Eastern Philippines.
        The first state universiy in Visayas where students are develop into academically competitive individuals prepared to take over the reigns of leadership. UEP warmly welcomes you to its campus.
        \nWe congratulate you for your decision to proceed to college and secure your future.
        We assure you that you had your best choice of a school which you would expect to mold you and your character to become not only the best individuals in your future careers,
        but life winners who will be assets in making the society a better place to live in.
    </string>
    <string name="uepSealText">The official seal of the University was registered with the Intellectual Property Office of the Philippines on August 1, 2013 with Registration No. 4/2013/00002186. The seal\'s design is show below.
        \nBlue and Gold colors - the University colors symbolize the lofty ideals of the institution and the golden dreams of the youth.
        \nWheel - symbolizes the unending search for knowledge.
        \nLamp - symbolic of the light that education brings.
        \nSun\'s Eight Rays - indicate Region 8 (Eastern Visayas), the immediate service area of the University.
        \nThe words Instruction, Research, Extension, Production - refer to the quadruple functions of the University.
        \nThe year 1918 - the establishment of the institution as the Catarman Farm School which later became the Catarman National Agricultural High School (CANHS).
        \nThe year 1956 - the establishment of the Samar Institute of Technology (SIT) and the abolition of CANHS on Jne 14, 1956 by virtue of Republic Act 1434.
        \nThe year 1964 - the conversion of SIT into the University of Eastern Philippines (UEP) on June 20, 1964 by virtue of Republic Act 4126.</string>
    <string name="uepVisionText">A globally competitive university producing graduates in pursuit of higher economic welfare of the people and the community through inclusion and cooperation from the stakeholders.</string>
    <string name="uepMissionText">Provide technical and professional training, advanced instruction in literature, arts, philosophy, the sciences and promotion of innovation, scientific and technological researches.</string>
    <string name="coreValuesText">R Relevance. All our plans and actions must be relevant to UEP\'s vision and mission.
        \nI Integrity. Honest beyond reproach, respected, trustworthy, and admired. Public officers and employees must at all times be accountable to te people, serve them with utmost responsibility, integrity, loyalty, and efficiency, act with patriotism and justice, and lead modest lives.
        \nP Productivity. Our output must always be equal to if not greater than the investment of the National Government.
        \nE Excellence. Our work must always wield beyond the average. It is the result of the right mix of knowledge, skills, and attitude.</string>
    <string name="uepHymnText">
        Let us sing to you, oh UEP
        \nSing the blue of your sea
        \nThe green of your mountains
        \nThe grain in your fields
        \nThe harvest in your groves
        \n\nLet us sing to you, dear UEP
        \nSing of your children fair
        \nThe knowledge you share
        \nThe values you instill
        \nThe service you render
        \n\nOnward, forevermore, UEP
        \nGod\'s grace be upon you
        \nHis mighty hands protect and guide you
        \nAs you face challenges
        \nTurn them \'to opportunities
        \nAnd your founders\' dream pursue
        \n\nSo we sing this hymn to you
        \nOf praise and gratitude
        \nBeloved Alma Mater
        \nKeep your blue and gold soaring
        \nOur found of wisdom, joy and hope
        \nUnsullied loyalty we do pledge
        \nUnsullied loyalty we do pledge
        \n\nMusic by Rev. Fr. Eleno A. Delizon
        \nLyrics by Dr. Lydia P.E. dela Rosa</string>
    <string name="organizationalChart">
        University President
        \n\t\tDr. Cherry I. Ultra
        \nVP for Academic Affairs
        \n\t\tDr. Abel Alejandro U. Flores
        \nVP for Administration \&amp; Finance
        \n\t\tMr. Bryan V. Navaroza
        \nVP for Research Development \&amp; Extension
        \n\t\tDr. Karina Milagros C. Lim
        \nVP for External Affairs
        \n\t\tDr. Nelia M. Adora
        \nBoard Secretary
        \n\t\tDr. Nelia M. Adora
        \nFinancial Management Officer
        \n\t\tMr. Ferdinand Reyes
        \nChief Administrative Officer
        \n\t\tDr. Abel Alejandro U. Flores
        \nFaculty Regent
        \n\t\tAtty. Bernabe L.Figueroa
        \nAlumni Regent
        \n\t\tAtty. Albert Yruma
        \nStudent Regent
        \n\t\tMs. Sherry Anne Ballicud
        \nNTSA President
        \n\t\tMr. James J. Bianes
        \nDean, Student Affairs
        \n\t\tDr. Josephine Tan
        \nDirector, UEP– Laoang Campus
        \n\t\tDr. Ronato Ballado
        \nCollege Administrator, UEP–PRMC
        \n\t\tDr. Rico De Asis
        \nDirector, Graduate Studies
        \n\t\tDr. Virginia G. Valanon
        \nUniversity Registrar
        \n\t\tMr. Arnold Rapsing</string>
    <string name="collegeInfoCS">
        College Dean
        \n\t\tDr. Celeste J. Chan
        \n
        \nCollege Secretary
        \n\t\tMs. Riva A. Gatongay
        \n
        \nChair, Department of Biological Sciences
        \nProgram Chair, BS Biology
        \n\t\tProf. Manuela Cecille G. Vicencio
        \nProgram Chair, BS Chemistry
        \n\t\tDr. Karina Milagros C. Lim
        \nChair, Department of Environmental Science
        \n\t\tProf. Anelita M. Obrar
        \nProgram Chair, Information Technology
        \n\t\tDr. Jose P. Ching, Jr.
        \nProgram Chair, Marine Biology
        \n\t\tProf. Florencio P. Mahinay
        \nChair, Department ofMathematics
        \nCollege Students Affairs and Services Coordinator
        \n\t\tMs. Mary Jane B. Calpa
        \nChair, Department of Physical Sciences
        \n\t\tDr. Ma. Lourdes C. Alvarez
        \n
        \nCollege Extension Coordinator
        \n\t\tProf. Romula A. Obleopas
        \nCollege Research Coordinator
        \n\t\tProf. Franklin E. Cortez
        \nCollege Instruction Coordinator
        \nCollege Guidance Coordinator
        \n\t\tEngr. Olga DG. Unay
        \nCollege External Affairs Coordinator
        \n\t\tMs Regina O. Belga
        \nCollege GAD Coordinator
        \n\t\tProf. Ma. Leovilla D. Santos
        \nCollege Biosafety Officer
        \n\t\tDr. Abel Alejandro U. Flores, Jr.
        \n
        \nCollege of Science Academic Offerings
        \n\t\tMaster of Science in Biological Science
        \n\t\tMaster of Science in Environmental Studies
        \n\t\tMaster of Science in Chemistry
        \n\t\tBachelor of Science in Biolgyy
        \n\t\tBachelor of Science in Chemistry
        \n\t\tBachelor of Science in Environmental Science
        \n\t\tBachelor of Science in Information Technology
        \n\t\tBachelor of Science in Marine Biology
        \n\t\tBachelor of Science in Mathematics
    </string>
    <integer name="TEXT_NO_SUGGESTIONS">524288</integer>
    <string name="aboutappIntroText">
        Hi there! "My Tagahanap" is a mobile application that we developed specifically for the University of Eastern Philippines Main Campus to help the user (students/faculty/staff) find a specific area/building by providing an optimal path that is displayed on map. This would lessen people asking for assistance to strangers when they need to find the room of their class, location of their meeting or orientation for which new comers are not familiar with. I hope you enjoy your stay here in the campus with your trusty app, My Tagahanap!
    </string>
    <string name="tokenTitle">Token</string>
    <string name="tokenInstruction">Long click the text below and save it somewhere safe. It will be used for resetting password.</string>
</resources>